--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,10 @@ djangorestframework==3.16.1
 pillow==12.0.0
 sqlparse==0.5.4
 tzdata==2025.2
-gunicorn
-whitenoise
-dj-database-url
-psycopg2-binary
+gunicorn==23.0.0
+whitenoise==6.8.2
+dj-database-url==2.3.0
+psycopg2-binary==2.9.10
 django-cors-headers
+
 
